--- a/index.html
+++ b/index.html
@@ -1286,9 +1286,7 @@
             </div>
 
             <div class="mt-auto d-flex justify-content-between">
-              <span class="fs--3 fs-lg--2"
-                >&copy; Spyre, 2023 Webinning Ltd.</span
-              >
+              <span class="fs--3 fs-lg--2">&copy; 2023 Webinning Ltd.</span>
               <div class="fs--3 fs-lg--2">
                 <a href="#" class="me-1 text-white">Privacy Policy</a>|<a
                   href="#"
