commit new index content

--- a/index.html
+++ b/index.html
@@ -368,6 +368,8 @@
     <!-- Main Content -->
     <main class="main minh-100vh">
       <!-- Section -->
+
+      <!-- Section -->
       <section class="py-0">
         <div class="container">
           <div class="row position-relative">
@@ -376,7 +378,7 @@
             >
               <div class="row align-items-center h-100">
                 <div class="col-lg-10 pb-3">
-                  <h1 class="fs-3 fs-lg-5 title-underline mb-5 pb-3">
+                  <h1 class="title-underline mb-5 pb-3">
                     Providing top-notch
                     <span
                       class="typed text-primary"
@@ -386,19 +388,41 @@
                     >
                     <br />into your roofing solutions.
                   </h1>
-                  <p class="mb-7">
+
+                  <h3>From El Paso to Texarkana:</h3>
+                  <p class="d-flex justify-content-center fw-bold">
                     Welcome to Integrity Roofing New Braunfels Texas, where
-                    quality meets reliability in roofing solutions. With over 30
-                    years of industry experience, we specialize in providing
-                    top-notch roofing services tailored to meet your needs.
-                    Whether it's repairs, installations, or maintenance, our
-                    skilled team is dedicated to delivering superior
+                    quality meets reliability in roofing solutions. Integrity
+                    Roofing NBTX company boasts a team of salesmen who bring a
+                    unique advantage to the table. They are former insurance
+                    adjusters with specialized expertise in storm repair and
+                    insurance claims. Leveraging their extensive experience in
+                    assessing storm damage and navigating insurance procedures,
+                    our salesmen provide invaluable support to roofers and
+                    homeowners alike.
+                  </p>
+
+                  <p class="fw-bold">
+                    With over 30 years of industry experience, we specialize in
+                    providing top-notch roofing services tailored to meet your
+                    needs. Whether it's repairs, installations, or maintenance,
+                    our skilled team is dedicated to delivering superior
                     craftsmanship and exceptional customer service. Trust us to
                     safeguard your home or business with durable, long-lasting
-                    roofing solutions that stand the test of time. Contact us
+                    roofing solutions that stand the test of time.
+                    <a id="contactClick" href="">Contact us</a>
                     today for a free consultation and experience peace of mind
-                    under a roof you can depend on.
+                    under a
                   </p>
+
+                  <div class="d-flex justify-content-center">
+                    <blockquote
+                      class="blockquote fw-bold"
+                      style="margin-bottom: 30px"
+                    >
+                      We Truly Are The Best In Texas.
+                    </blockquote>
+                  </div>
 
                   <div
                     class="row justify-content-center justify-content-lg-start"
@@ -481,6 +505,7 @@
           </div>
         </div>
       </section>
+
       <!-- End of Section -->
 
       <!-- Section -->
@@ -749,7 +774,7 @@
             <div class="col position-relative">
               <a
                 data-fancybox
-                href=""
+                href="https://vimeo.com/manage/videos/927256292/"
                 class="icon mx-auto align-items-center text"
                 ><i class="zmdi zmdi-play zmdi-hc-4x"></i
               ></a>
@@ -1096,7 +1121,7 @@
       <section class="text-center">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-md-7">
+            <div class="col-md-6">
               <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
                 Contact Us
               </h3>
@@ -1164,6 +1189,15 @@
                   </div>
                 </div>
               </form>
+            </div>
+            <div class="col-md-6">
+              <div>
+                <img
+                  src="../assets/img/roofing_contact_us.jpg"
+                  class="img-fluid w-100"
+                  alt=""
+                />
+              </div>
             </div>
           </div>
         </div>
