--- a/index.html
+++ b/index.html
@@ -390,6 +390,12 @@
                   </h1>
 
                   <h3>From El Paso to Texarkana:</h3>
+                  <p>
+                    Stragetically located in NB to serve Central & South Texas,
+                    we also have offices in Frisco to serve North Texas and in
+                    Tyler to serve East Texas.
+                  </p>
+
                   <p class="d-flex justify-content-center fw-bold">
                     Welcome to Integrity Roofing New Braunfels Texas, where
                     quality meets reliability in roofing solutions. Integrity
