--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
           ><a href="tel:512-757-5077" class="ps-5">512-757-5077</a>
         </span>
 
-        <div class="search d-none d-lg-flex justify-content-end ms-auto me-2">
+        <!-- <div class="search d-none d-lg-flex justify-content-end ms-auto me-2">
           <input class="form-control me-2" type="text" />
           <i class="zmdi zmdi-search"></i>
-        </div>
+        </div> -->
 
         <div class="menu-toggle">
           <div class="hamburger">
@@ -139,11 +139,6 @@
             >
               <nav class="spyre-navbar-nav">
                 <ul class="spyre-nav">
-                  <li class="spyre-nav-item">
-                    <a href="../pages/index.html" class="spyre-nav-link"
-                      >Overview</a
-                    >
-                  </li>
                   <li class="spyre-nav-item dropdown">
                     <a
                       href="#"
@@ -162,33 +157,9 @@
                       </li>
                       <li class="dropdown-menu-item">
                         <a
-                          href="../pages/services.html"
-                          class="dropdown-menu-link"
-                          >Services</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a href="../pages/blog.html" class="dropdown-menu-link"
-                          >Blog</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/blog-single.html"
-                          class="dropdown-menu-link"
-                          >Blog single</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
                           href="../pages/portfolio.html"
                           class="dropdown-menu-link"
-                          >Portfolio</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a href="../pages/about.html" class="dropdown-menu-link"
-                          >About</a
+                          >Gallery</a
                         >
                       </li>
                       <li class="dropdown-menu-item">
@@ -198,87 +169,7 @@
                           >Contact</a
                         >
                       </li>
-                      <li class="dropdown-menu-item">
-                        <a href="../pages/team.html" class="dropdown-menu-link"
-                          >Team</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a href="../pages/faq.html" class="dropdown-menu-link"
-                          >FAQ</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/pricing.html"
-                          class="dropdown-menu-link"
-                          >Pricing</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/careers.html"
-                          class="dropdown-menu-link"
-                          >Careers</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/careers-single.html"
-                          class="dropdown-menu-link"
-                          >Careers single</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/coming-soon.html"
-                          class="dropdown-menu-link"
-                          >Coming soon</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a href="../pages/404.html" class="dropdown-menu-link"
-                          >404</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/sign-in.html"
-                          class="dropdown-menu-link"
-                          >Sign In</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/sign-up.html"
-                          class="dropdown-menu-link"
-                          >Sing Up</a
-                        >
-                      </li>
-                      <li class="dropdown-menu-item">
-                        <a
-                          href="../pages/recover-account.html"
-                          class="dropdown-menu-link"
-                          >Recover account</a
-                        >
-                      </li>
                     </ul>
-                  </li>
-                  <li class="spyre-nav-item">
-                    <a href="../docs/animations.html" class="spyre-nav-link"
-                      >Components</a
-                    >
-                  </li>
-                  <li class="spyre-nav-item">
-                    <a href="../docs/index.html" class="spyre-nav-link">Docs</a>
-                  </li>
-                  <li class="spyre-nav-item">
-                    <a
-                      href="https://themes.getbootstrap.com/product/spyre-slick-contemporary-multipurpose-theme"
-                      target="_blank"
-                      class="spyre-nav-link"
-                      >Purchase</a
-                    >
                   </li>
                 </ul>
               </nav>
@@ -368,8 +259,6 @@
     <!-- Main Content -->
     <main class="main minh-100vh">
       <!-- Section -->
-
-      <!-- Section -->
       <section class="py-0">
         <div class="container">
           <div class="row position-relative">
@@ -378,7 +267,7 @@
             >
               <div class="row align-items-center h-100">
                 <div class="col-lg-10 pb-3">
-                  <h1 class="title-underline mb-5 pb-3">
+                  <h1 class="title-underline mb-4 pb-3">
                     Providing top-notch
                     <span
                       class="typed text-primary"
@@ -389,14 +278,16 @@
                     <br />into your roofing solutions.
                   </h1>
 
-                  <h3>From El Paso to Texarkana:</h3>
-                  <p>
+                  <h3 style="color: red; margin-bottom: 20px">
+                    From Amarillo to Houston and El Paso to Texarkana, we truly
+                    are &quot;Best in Texas&quot;.
+                  </h3>
+                  <h6 class="fw-bold" style="margin-bottom: 20px">
                     Stragetically located in NB to serve Central & South Texas,
                     we also have offices in Frisco to serve North Texas and in
                     Tyler to serve East Texas.
-                  </p>
-
-                  <p class="d-flex justify-content-center fw-bold">
+                  </h6>
+                  <p class="d-flex justify-content-center">
                     Welcome to Integrity Roofing New Braunfels Texas, where
                     quality meets reliability in roofing solutions. Integrity
                     Roofing NBTX company boasts a team of salesmen who bring a
@@ -408,7 +299,7 @@
                     homeowners alike.
                   </p>
 
-                  <p class="fw-bold">
+                  <p style="margin-bottom: 20px">
                     With over 30 years of industry experience, we specialize in
                     providing top-notch roofing services tailored to meet your
                     needs. Whether it's repairs, installations, or maintenance,
@@ -421,14 +312,14 @@
                     under a
                   </p>
 
-                  <div class="d-flex justify-content-center">
+                  <!-- <div class="d-flex justify-content-center">
                     <blockquote
                       class="blockquote fw-bold"
                       style="margin-bottom: 30px"
                     >
                       We Truly Are The Best In Texas.
                     </blockquote>
-                  </div>
+                  </div> -->
 
                   <div
                     class="row justify-content-center justify-content-lg-start"
@@ -511,7 +402,6 @@
           </div>
         </div>
       </section>
-
       <!-- End of Section -->
 
       <!-- Section -->
@@ -658,6 +548,114 @@
       <!-- End of Section -->
 
       <!-- Section -->
+      <!-- <section class="pt-0">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <h3 class="my-0 fs-1 fw-medium text-primary text-uppercase">
+                Our
+              </h3>
+              <h2 class="mb-5 fw-medium text-secondary text-uppercase">
+                Clients
+              </h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
+              <div
+                class="bg-light p-3 d-flex square"
+                data-aos="flip-left"
+                data-aos-duration="1000"
+              >
+                <img
+                  src="../assets/img/clients/logo-01.png"
+                  alt=""
+                  width="130"
+                  class="img-fluid d-flex align-self-center mx-auto"
+                />
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
+              <div
+                class="bg-light p-3 d-flex square"
+                data-aos="flip-left"
+                data-aos-duration="1000"
+                data-aos-delay="50"
+              >
+                <img
+                  src="../assets/img/clients/logo-02.png"
+                  alt=""
+                  width="120"
+                  class="img-fluid d-flex align-self-center mx-auto"
+                />
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
+              <div
+                class="bg-light p-3 d-flex square"
+                data-aos="flip-left"
+                data-aos-duration="1000"
+                data-aos-delay="100"
+              >
+                <img
+                  src="../assets/img/clients/logo-03.png"
+                  alt=""
+                  width="113"
+                  class="img-fluid d-flex align-self-center mx-auto"
+                />
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
+              <div
+                class="bg-light p-3 d-flex square"
+                data-aos="flip-left"
+                data-aos-duration="1000"
+                data-aos-delay="150"
+              >
+                <img
+                  src="../assets/img/clients/logo-04.png"
+                  alt=""
+                  width="125"
+                  class="img-fluid d-flex align-self-center mx-auto"
+                />
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
+              <div
+                class="bg-light p-3 d-flex square"
+                data-aos="flip-left"
+                data-aos-duration="1000"
+                data-aos-delay="200"
+              >
+                <img
+                  src="../assets/img/clients/logo-05.png"
+                  alt=""
+                  width="110"
+                  class="img-fluid d-flex align-self-center mx-auto"
+                />
+              </div>
+            </div>
+            <div class="col-6 col-md-4 col-lg-2 mb-3">
+              <div
+                class="bg-light p-3 d-flex square"
+                data-aos="flip-left"
+                data-aos-duration="1000"
+                data-aos-delay="250"
+              >
+                <img
+                  src="../assets/img/clients/logo-06.png"
+                  alt=""
+                  width="57"
+                  class="img-fluid d-flex align-self-center mx-auto"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
+      <!-- End of Section -->
+
+      <!-- Section -->
       <section class="py-8 py-md-11 overflow-hidden">
         <div
           class="bg-container parallax"
@@ -672,7 +670,7 @@
             <div class="col position-relative">
               <a
                 data-fancybox
-                href="https://vimeo.com/manage/videos/927256292/"
+                href="https://player.vimeo.com/video/927256292"
                 class="icon mx-auto align-items-center text"
                 ><i class="zmdi zmdi-play zmdi-hc-4x"></i
               ></a>
@@ -1139,6 +1137,11 @@
                     ><i class="zmdi zmdi-email zmdi-hc-fw me-1"></i
                     >integrityroofingNBTX@gmail.com</a
                   >
+                  <br />
+                  <a href="#" class="text-white"
+                    ><i class="zmdi zmdi-map zmdi-hc-fw me-1"></i>Central Texas-
+                    New Braunfels, TX</a
+                  >
                 </p>
               </div>
 
@@ -1183,29 +1186,14 @@
             class="col d-flex flex-column mb-2 mt-3 ps-lg-7 position-relative"
           >
             <div class="row pt-5 pt-lg-8 pb-4 pb-lg-6">
-              <!-- <div class="col-6 col-lg-3">
-                <h6 class="mb-1 mb-lg-4 text-uppercase">Services</h6>
-                <ul class="pt-2 mb-5 fw-light list-unstyled">
-                  <li class="my-1">
-                    <a href="#" class="text-white">Design</a>
-                  </li>
-                  <li class="my-1">
-                    <a href="#" class="text-white">Development</a>
-                  </li>
-                  <li class="my-1">
-                    <a href="#" class="text-white">Themes</a>
-                  </li>
-                  <li class="my-1"><a href="#" class="text-white">CMS</a></li>
-                  <li class="my-1">
-                    <a href="#" class="text-white">Mobile</a>
-                  </li>
-                </ul>
-              </div> -->
               <div class="col-6 col-lg-3">
-                <h6 class="mb-1 mb-lg-4 text-uppercase">About</h6>
+                <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="#" class="text-white">About Us</a>
+                    <a href="#" class="text-white">Gallery</a>
+                  </li>
+                  <li class="my-1">
+                    <a href="#" class="text-white">Contact Us</a>
                   </li>
                 </ul>
               </div>
@@ -1220,11 +1208,8 @@
             <div class="mt-auto d-flex justify-content-between">
               <span class="fs--3 fs-lg--2">&copy; 2023 Webinning Ltd.</span>
               <div class="fs--3 fs-lg--2">
-                <a href="#" class="me-1 text-white">Privacy Policy</a>|<a
-                  href="#"
-                  class="ms-1 text-white"
-                  >Cookie Policy</a
-                >
+                <a href="#" class="me-1 text-white">Privacy Policy</a
+                ><a href="#" class="ms-1 text-white">Cookie Policy</a>
               </div>
             </div>
           </div>
