--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -297,10 +297,10 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item print vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6158.jpg"
+                      href="../assets/img/clients/IMG_6158.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6158.jpg"
+                        src="../assets/img/clients/IMG_6158.jpg"
                         alt="Image 01"
                     /></a>
                   </div>
@@ -309,20 +309,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6160.jpg"
+                      href="../assets/img/clients/IMG_6160.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6160.jpg"
+                        src="../assets/img/clients/IMG_6160.jpg"
                         alt="Image 02"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6161.jpg"
+                      href="../assets/img/clients/IMG_6161.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6161.jpg"
+                        src="../assets/img/clients/IMG_6161.jpg"
                         alt="Image 03"
                     /></a>
                   </div>
@@ -331,42 +331,42 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6187.jpg"
+                      href="../assets/img/clients/IMG_6162.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6187.jpg"
+                        src="../assets/img/clients/IMG_6162.jpg"
                         alt="Image 04"
                     /></a>
                   </div>
                   <div class="col-12 col-lg-8 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6162.jpg"
+                      href="../assets/img/clients/IMG_6163.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6162.jpg"
+                        src="../assets/img/clients/IMG_6163.jpg"
                         alt="Image 05"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item art online">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6163.jpg"
+                      href="../assets/img/clients/IMG_6166.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6163.jpg"
+                        src="../assets/img/clients/IMG_6166.jpg"
                         alt="Image 06"
                     /></a>
                   </div>
                   <div class="col-12 col-lg-8 p-3 grid-item art online">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6163.jpg"
+                      href="../assets/img/clients/IMG_6167.jpg"
                       class="position-relative"
                     >
                       <img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6163.jpg"
+                        src="../assets/img/clients/IMG_6167.jpg"
                         alt="Image 07"
                       />
                       <!-- <span class="icon icon-sm position-absolute mt-n6 ms-3">
@@ -377,50 +377,50 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6166.jpg"
+                      href="../assets/img/clients/IMG_6168.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6166.jpg"
+                        src="../assets/img/clients/IMG_6168.jpg"
                         alt="Image 08"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6167.jpg"
+                      href="../assets/img/clients/IMG_6169.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6167.jpg"
+                        src="../assets/img/clients/IMG_6169.jpg"
                         alt="Image 09"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6168.jpg"
+                      href="../assets/img/clients/IMG_6170.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6168.jpg"
+                        src="../assets/img/clients/IMG_6170.jpg"
                         alt="Image 10"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6169.jpg"
+                      href="../assets/img/clients/IMG_6171.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6169.jpg"
+                        src="../assets/img/clients/IMG_6171.jpg"
                         alt="Image 11"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6170.jpg"
+                      href="../assets/img/clients/IMG_6172.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6170.jpg"
+                        src="../assets/img/clients/IMG_6172.jpg"
                         alt="Image 12"
                     /></a>
                   </div>
@@ -428,10 +428,10 @@
                   <div class="col-md-7 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6171.jpg"
+                      href="../assets/img/clients/IMG_6173.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6171.jpg"
+                        src="../assets/img/clients/IMG_6173.jpg"
                         alt="Image 13"
                     /></a>
                   </div>
@@ -440,20 +440,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6172.jpg"
+                      href="../assets/img/clients/IMG_6174.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6172.jpg"
+                        src="../assets/img/clients/IMG_6174.jpg"
                         alt="Image 14"
                     /></a>
                   </div>
                   <div class="col-md-4 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6173.jpg"
+                      href="../assets/img/clients/IMG_6175.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6173.jpg"
+                        src="../assets/img/clients/IMG_6175.jpg"
                         alt="Image 15"
                     /></a>
                   </div>
@@ -461,10 +461,10 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item print vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6174.jpg"
+                      href="../assets/img/clients/IMG_6176.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6174.jpg"
+                        src="../assets/img/clients/IMG_6176.jpg"
                         alt="Image 16"
                     /></a>
                   </div>
@@ -473,20 +473,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6175.jpg"
+                      href="../assets/img/clients/IMG_6177.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6175.jpg"
+                        src="../assets/img/clients/IMG_6177.jpg"
                         alt="Image 17"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6176.jpg"
+                      href="../assets/img/clients/IMG_6178.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6176.jpg"
+                        src="../assets/img/clients/IMG_6178.jpg"
                         alt="Image 18"
                     /></a>
                   </div>
@@ -496,30 +496,30 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6177.jpg"
+                      href="../assets/img/clients/IMG_6179.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6177.jpg"
+                        src="../assets/img/clients/IMG_6179.jpg"
                         alt="Image 19"
                     /></a>
                   </div>
                   <div class="col-12 col-lg-8 p-3 grid-item art vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6178.jpg"
+                      href="../assets/img/clients/IMG_6180.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6178.jpg"
+                        src="../assets/img/clients/IMG_6180.jpg"
                         alt="Image 20"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item art online">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6179.jpg"
+                      href="../assets/img/clients/IMG_6181.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6179.jpg"
+                        src="../assets/img/clients/IMG_6181.jpg"
                         alt="Image 21"
                     /></a>
                   </div>
@@ -527,10 +527,10 @@
                   <div class="col-md-7 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6180.jpg"
+                      href="../assets/img/clients/IMG_6182.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6180.jpg"
+                        src="../assets/img/clients/IMG_6182.jpg"
                         alt="Image 22"
                     /></a>
                   </div>
@@ -539,20 +539,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6181.jpg"
+                      href="../assets/img/clients/IMG_6183.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6181.jpg"
+                        src="../assets/img/clients/IMG_6183.jpg"
                         alt="Image 23"
                     /></a>
                   </div>
                   <div class="col-md-4 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6182.jpg"
+                      href="../assets/img/clients/IMG_6184.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6182.jpg"
+                        src="../assets/img/clients/IMG_6184.jpg"
                         alt="Image 24"
                     /></a>
                   </div>
@@ -560,10 +560,10 @@
                   <div class="col-md-6 col-lg-4 p-3 grid-item print vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6183.jpg"
+                      href="../assets/img/clients/IMG_6185.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6183.jpg"
+                        src="../assets/img/clients/IMG_6185.jpg"
                         alt="Image 25"
                     /></a>
                   </div>
@@ -572,20 +572,20 @@
                   >
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6184.jpg"
+                      href="../assets/img/clients/IMG_6187.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6184.jpg"
+                        src="../assets/img/clients/IMG_6187.jpg"
                         alt="Image 26"
                     /></a>
                   </div>
                   <div class="col-md-6 col-lg-4 p-3 grid-item identity vision">
                     <a
                       data-fancybox="gallery"
-                      href="/spyre-v.2.0.0/assets/img/clients/IMG_6185.jpg"
+                      href="../assets/img/clients/IMG_6162.jpg"
                       ><img
                         class="img-fluid w-100"
-                        src="/spyre-v.2.0.0/assets/img/clients/IMG_6185.jpg"
+                        src="../assets/img/clients/IMG_6162.jpg"
                         alt="Image 27"
                     /></a>
                   </div>
@@ -604,7 +604,9 @@
 
     <footer
       class="footer text-white"
-      style="background-image: url(../assets/img/backgrounds/bg_footer.jpeg)"
+      style="
+        background-image: url(../assets/img/backgrounds/gallery_background.jpeg);
+      "
     >
       <div class="container d-flex h-100">
         <div class="row flex-grow-1">
