--- a/pages/contact.html
+++ b/pages/contact.html
@@ -445,10 +445,10 @@
                 <h6 class="mb-1 mb-lg-4 text-uppercase">Pages</h6>
                 <ul class="pt-2 mb-5 fw-light list-unstyled">
                   <li class="my-1">
-                    <a href="#" class="text-white">Home</a>
+                    <a href="/dist/index.html" class="text-white">Home</a>
                   </li>
                   <li class="my-1">
-                    <a href="#" class="text-white">Gallery</a>
+                    <a href="./portfolio.html" class="text-white">Gallery</a>
                   </li>
                 </ul>
               </div>
