--- a/pages/contact.html
+++ b/pages/contact.html
@@ -143,7 +143,7 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item">
-                        <a href="/dist/index.html" class="dropdown-menu-link"
+                        <a href="dist/index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
