--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     >
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li class="dropdown-menu-item active">
-                        <a href="../pages/home.html" class="dropdown-menu-link"
+                        <a href="index.html" class="dropdown-menu-link"
                           >Homepage</a
                         >
                       </li>
